TEIID-816 TEIID 817 Fix for = criteria, NPE in the FileConnector, and a multiplicity problem with the HTTP and SOAP Relational connectors.  Added some generics.